--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,17 +6,15 @@
     04. Back to top 
 ----------------------------------------------*/
 
-
-@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Kanit:wght@400;500;600;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 :root {
   --body: #fff;
   --black: #000;
   --white: #fff;
-  --theme: #B97B3C;
+  --theme: #F09028;
   --theme2: #C8F168;
   --header: #241442;
-  --title: #111111;
+  --title: #373737;
   --orange: #F74F22;
   --text: #525252;
   --border: #BABBC1;
@@ -30,7 +28,7 @@
     Template Default Fonts & Fonts Styles
  ---------------------------------------------- */
 body {
-  font-family: "Kanit", sans-serif;
+  font-family: "Open Sans", sans-serif;;
   font-size: 16px;
   font-weight: normal;
   line-height: 28px;
@@ -68,7 +66,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Outfit", sans-serif;
+  font-family: "Open Sans", sans-serif;
   margin: 0px;
   padding: 0;
   color: var(--header);
@@ -156,7 +154,7 @@ span {
   padding: 13px 15px;
   gap: 10px;
   color: var(--white);
-  font-family: "Kanit", sans-serif;
+  font-family: "Open Sans", sans-serif;;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
@@ -235,8 +233,11 @@ span {
 .mb-5 {
   margin-bottom: 5px;
 }
+.mt-2{
+  margin-top: 1rem!important;
+}
 .mt-4{
-  margin-top: 3rem;
+  margin-top: 3rem!important;
 }
 .d-flex {
   display: flex;
@@ -269,6 +270,17 @@ span {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+.bg-theme {
+  background-color: var(--theme);
+  padding: 3px 5px;
+  color: var(--title)!important;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
 }
 
 /*----------------------------------------------
@@ -306,7 +318,7 @@ span {
     }
   }
   .preloader .animation-preloader .txt-loading {
-    font: bold 5em "Outfit", sans-serif, "Kanit", sans-serif;
+    font: bold 5em "Open Sans", sans-serif;
     text-align: center;
     user-select: none;
   }
@@ -346,7 +358,7 @@ span {
     content: attr(data-text-preloader);
     left: 0;
     opacity: 0;
-    font-family: "Outfit", sans-serif;
+    font-family: "Open Sans", sans-serif;
     position: absolute;
     top: -3px;
     transform: rotateY(-90deg);
@@ -588,7 +600,7 @@ span {
   }
   @media (max-width: 450px) {
     .header-1 .header-right {
-      gap: 15px !important;
+      gap: 30px !important;
     }
   }
   .header-1 .header-right .header-button {
@@ -1397,32 +1409,59 @@ input.main-search-input::placeholder {
 }
 
 .breadcumb-wrapper .page-heading{
-  max-width: 600px;
+  max-width: 700px;
   text-align: center;
   margin: 0 auto;
 }
  
+.breadcumb-wrapper .page-heading .title{
+  font-size: 76px;
+  font-family: "Open Sans", sans-serif;
+  color: var(--white);
+}
+
 .breadcumb-wrapper .page-heading .breadcrumb-items{
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 15px;
+  color: var(--white);
+  font-size: 30px;
+  font-family: "Open Sans", sans-serif;
+  font-weight: bold;
+}
+.breadcumb-wrapper .page-heading .breadcrumb-items li a{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 15px;
+  color: var(--white);
+  font-size: 30px;
+  font-family: "Open Sans", sans-serif;
+  font-weight: bold;
 }
 
-
 /*----------------------------------------------
-    07. Breadcumb   
+    07. Service   
 ----------------------------------------------*/
 
 .service-card-wrapper.style1{
   display: grid;
   grid-template-columns: repeat(4,1fr);
-  gap: 80px;
+  gap: 60px;
 }
 
+.service-card.style1 .fancy-box.style1{
+  margin-bottom: 30px;
+}
 .service-card.style1{
-  padding: 40px 25px 25px 20px;
+  padding: 40px 15px 25px 20px;
   box-shadow: var(--box-shadow);
+  border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
 }
 .fancy-box.style1{
   display: flex;
@@ -1445,14 +1484,65 @@ input.main-search-input::placeholder {
 
 .checklist ul li {
   gap: 20px;
+  margin-top: 5px;
 }
 
 .checklist ul li .content h6{
-  font-size: 20px; 
+  font-size: 22px; 
   color: var(--text);
+  font-weight: 500;
+  font-family: "Open Sans", sans-serif;
 }
 
 .checklist ul li .content span{
-  font-size: 22px;
+  font-size: 17px;
   color: var(--theme);
+  font-weight: 900;
+  font-family: "Open Sans", sans-serif;
+}
+
+.checklist ul .see-more i{
+  color: var(--theme);
+}
+
+.checklist ul .see-more .content h6{ 
+  font-size: 17px;
+  color: var(--theme);
+  font-weight: 900;
+  font-family: "Open Sans", sans-serif;
+}
+
+.checklist ul li select {
+  padding: 6px;
+  background-color: #E6E7E8;
+  border: none;
+  border-radius: 8px;
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  -ms-border-radius: 8px;
+  -o-border-radius: 8px;
+}
+
+.checklist ul li label {
+  font-size: 17px;
+  margin-left: 5px;
+  color: var(--title);
+  font-weight: 600;
+  font-family: "Open Sans", sans-serif;
+}
+.checklist ul li label img {
+ width: 15px;
+ height: 15px;
+}
+.checklist .single {
+  display: flex;
+  gap: 20px;
+}
+
+.checklist .single li{ 
+  width: 100px;
+}
+
+.checklist .single li input{
+  margin-left: 10px;
 }
