--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,14 +1,13 @@
- 
- .container{
-  --bs-gutter-x: 1.5rem;
-  --bs-gutter-y: 0;
-  width: 100%;
-  padding-right: calc(var(--bs-gutter-x) * 0.5);
-  padding-left: calc(var(--bs-gutter-x) * 0.5);
-  margin-right: auto!important;
-  margin-left: auto!important;
-}
- 
+ .container {
+   --bs-gutter-x: 1.5rem;
+   --bs-gutter-y: 0;
+   width: 100%;
+   padding-right: calc(var(--bs-gutter-x) * 0.5);
+   padding-left: calc(var(--bs-gutter-x) * 0.5);
+   margin-right: auto !important;
+   margin-left: auto !important;
+ }
+
  @media (min-width: 768px) {
    .container {
      max-width: 720px;
@@ -23,7 +22,7 @@
 
    .offer-card-wrapper.style1 {
      grid-template-columns: repeat(1, 1fr);
-     gap: 60px;
+     gap: 70px;
    }
  }
 
@@ -42,7 +41,7 @@
 
    .offer-card-wrapper.style1 {
      grid-template-columns: repeat(2, 1fr);
-     gap: 60px;
+     gap: 80px;
    }
  }
 
@@ -60,7 +59,7 @@
 
    .offer-card-wrapper.style1 {
      grid-template-columns: repeat(2, 1fr);
-     gap: 60px;
+     gap: 80px;
    }
  }
 
@@ -77,7 +76,7 @@
 
    .offer-card-wrapper.style1 {
      grid-template-columns: repeat(2, 1fr);
-     gap: 60px;
+     gap: 90px;
    }
 
  }
@@ -96,7 +95,7 @@
 
    .offer-card-wrapper.style1 {
      grid-template-columns: repeat(3, 1fr);
-     gap: 60px;
+     gap: 100px;
    }
 
  }
@@ -112,16 +111,17 @@
  }
 
 
- @media (max-width: 768px) { 
-  .container{
-    --bs-gutter-x: 1.5rem;
-    --bs-gutter-y: 0;
-    width: 90%;
-    padding-right: calc(var(--bs-gutter-x) * 0.5);
-    padding-left: calc(var(--bs-gutter-x) * 0.5);
-    margin-right: auto!important;
-    margin-left: auto!important;
-  }
+ @media (max-width: 768px) {
+   .container {
+     --bs-gutter-x: 1.5rem;
+     --bs-gutter-y: 0;
+     width: 90%;
+     padding-right: calc(var(--bs-gutter-x) * 0.5);
+     padding-left: calc(var(--bs-gutter-x) * 0.5);
+     margin-right: auto !important;
+     margin-left: auto !important;
+   }
+
    .service-card-wrapper.style1 {
      display: grid;
      grid-template-columns: repeat(1, 1fr);
@@ -129,7 +129,7 @@
    }
 
    .header-1 .header-right .sidebar__toggle {
-     color: var(--theme); 
+     color: var(--theme);
    }
 
    .breadcumb-wrapper .page-heading .title {
@@ -145,8 +145,21 @@
      font-weight: bold;
    }
 
-   .header-section-1  {   
-    overflow: hidden;
-}
+   .header-section-1 {
+     overflow: hidden;
+   }
+
+
+   .offer-card-wrapper.style1 {
+     grid-template-columns: repeat(1, 1fr);
+     gap: 90px;
+   }
+
+   .theme-btn.style2 {
+     font-size: 30px;
+   }
+
+   .theme-btn.style3 {
+     font-size: 30px;
+   }
  }
- 
