--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -707,7 +707,7 @@ span {
     font-weight: 400;
     color: var(--title);
     padding: 20px 0;
-    text-align: left;
+    text-align: right;
     position: relative;
     text-transform: capitalize;
     transition: all 0.4s ease-in-out;
@@ -1633,7 +1633,22 @@ input.main-search-input::placeholder {
 /*----------------------------------------------
     08. Service   
 ----------------------------------------------*/
-
+.offer-wrapper.style1 .show-more-btn {
+  max-width: 120px;
+  margin: 30px auto;
+  font-size: 20px;
+  font-weight: 600;
+  font-family: "Open sans", sans-serif;
+ border: 2px solid var(--title);
+ color: var(--theme);
+ padding: 10px 40px;
+ display: block;
+ border-radius: 10px;
+ -webkit-border-radius: 10px;
+ -moz-border-radius: 10px;
+ -ms-border-radius: 10px;
+ -o-border-radius: 10px;
+}
 .offer-card-wrapper.style1 { 
   display: grid;
   grid-template-columns: repeat(3,1fr);
@@ -1661,7 +1676,7 @@ input.main-search-input::placeholder {
 .offer-card.style1 .offer-card-header .logo img{
   position: absolute;
   top: -100px;
-  right: 40px;
+  left: 40px;
   width: 100px;
   height: 100px;
   padding: 10px;
@@ -1677,7 +1692,7 @@ input.main-search-input::placeholder {
 .offer-card.style1 .offer-card-header .badge{
   position: absolute;
   top: -50px;
-  left: 40px; 
+  right: 40px; 
   padding: 10px 25px;
   background-color: var(--theme);
   box-shadow: var(--box-shadow);
